syntax = "proto3";

package proto2;

import "google/api/annotations.proto";

service HelloHttp {
	rpc SayHello(HelloRequest) returns (HelloReply) {
		option (google.api.http) = {
			post: "/example/echo"
			body: "*"
		};
	}
}

message HelloRequest {
	string name = 1;
}

message HelloReply {
	string message = 1;
}